fixed some padding issues with the table data. It was making hard to figure why the input fields were bleeding outside of the borders. Now it's time for the animations

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -35,10 +35,14 @@ $reset-button-color2: #5a5f67;
     border: 1px solid black;
 }
 
+
+
 html {
     @include gradient();
     padding: 10% 0;
 }
+
+
 
 body {
     @include flexColumn();
@@ -48,17 +52,6 @@ body {
         border: 1px solid white;
         margin: 5% 0;
         background-image: linear-gradient(#ff5e00b1, #ff863f);
-    }
-
-    .input {
-        @include flexRow();
-        justify-content: space-evenly;
-        margin-bottom: 10%;
-    }
-
-    input {
-        padding: 1% 10%;
-        margin: 2% 0;
     }
 
     #submitButton {
@@ -105,21 +98,21 @@ body {
 }
 
 table {
-    min-height: 100%;
-    min-width: 100%;
 
 
     td {
         border: 1px solid white;
         border-radius: 5px;
         text-align: center;
-        padding: 5%;
+        padding-top: 7.5%;
+        padding-bottom: 7.5%;
     }
 
     input {
+        padding: 1% 5%;
+        margin: 2% 0;
         border-radius: 10px;
         border: none;
     }
-
 
 }
